Update install.sh and gpg instructions
Signed-off-by: Ahmet Alp Balkan <ahmetb@google.com>

--- a/.gnupg/README
+++ b/.gnupg/README
@@ -1,28 +1,34 @@
-# A quick outline of what must be done to get everything working.
+A quick outline of what must be done to get everything working.
 
-# 1) Install the dependencies.
-brew install gnupg gpg-agent pinentry-mac keybase
+1) Install the dependencies.
 
-# 2) Configure git to automatically gpgsign commits. This consists of
-#    pointing git to your signing key ID, and then enabling commit
-#    automatic signing.
-git config --global user.signingkey <YOUR-SIGNING-KEY-PUB-ID>
-git config --global commit.gpgsign true
+    brew install gpg gpg-agent pinentry-mac Caskroom/cask/keybase 
 
-# 3) Configure the GPG components (see above for relevant examples):
-#    ~/.gnupg/gpg.conf
-#    ~/.gnupg/gpg-agent.conf
+2) Generate keys:
 
-# 4) Start the daemon and configure your shell (see above for example in .profile).
-#    ~/.bash_profile | ~/.zshrc
+keybase pgp gen --multi
 
-# 5) Follow instructions on https://github.com/pstadler/keybase-gpg-github to
-#    generate a signing key and associate it with git.
+3) Run gpg --list-secret-keys and copy the "sec   4096R/XXXXXXXX"
+   section. That's the signing public key ID to be used below.
 
-# Don't forget to upload your public key to Github!
-# https://github.com/blog/2144-gpg-signature-verification
-# Note: There needs to be a three-way match on your email for Github to show
-# the commit as 'verified': The commit email, github email, & the email associated with the public key
+4) Configure git to automatically gpgsign commits. This consists of
+   pointing git to your signing key ID, and then enabling commit
+   automatic signing.
 
-# Learn about creating a GPG key and the knowledge behind these commands here:
-# https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work
+    git config --global user.signingkey <PUB-ID>
+    git config --global commit.gpgsign true
+
+5) Copy the publickey into your clipboard:
+
+    keybase pgp export -q <PUB-ID> | pbcopy
+
+5) Open https://github.com/settings/keys and paste the public key
+   there. 
+
+Don't forget to upload your public key to Github!
+https://github.com/blog/2144-gpg-signature-verification
+Note: There needs to be a three-way match on your email for Github to show
+the commit as 'verified': The commit email, github email, & the email associated with the public key
+
+Learn about creating a GPG key and the knowledge behind these commands here:
+https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work
