--- a/.gnupg/README
+++ b/.gnupg/README
@@ -1,34 +1,26 @@
 A quick outline of what must be done to get everything working.
 
-1) Install the dependencies.
+1) Generate keys:
 
-    brew install gpg gpg-agent pinentry-mac Caskroom/cask/keybase 
+    keybase pgp gen --multi
 
-2) Generate keys:
+2) Run "gpg --list-secret-keys" and copy the serial number
+   next to "sig" (it's 3B9A89CAE5009078 below):
+   
+    ...
+    sub   rsa4096 2019-01-31 [E] [expires: 2035-01-27]
+    sig          3B9A89CAE5009078 2019-01-31  Ahmet Alp Balkan <ahmetalpbalkan@gmail.com>
 
-keybase pgp gen --multi
-
-3) Run gpg --list-secret-keys and copy the "sec   4096R/XXXXXXXX"
-   section. That's the signing public key ID to be used below.
-
-4) Configure git to automatically gpgsign commits. This consists of
+3) Configure git to automatically gpgsign commits. This consists of
    pointing git to your signing key ID, and then enabling commit
    automatic signing.
 
     git config --global user.signingkey <PUB-ID>
     git config --global commit.gpgsign true
 
-5) Copy the publickey into your clipboard:
+4) Copy the publickey into your clipboard:
 
     keybase pgp export -q <PUB-ID> | pbcopy
 
 5) Open https://github.com/settings/keys and paste the public key
    there. 
-
-Don't forget to upload your public key to Github!
-https://github.com/blog/2144-gpg-signature-verification
-Note: There needs to be a three-way match on your email for Github to show
-the commit as 'verified': The commit email, github email, & the email associated with the public key
-
-Learn about creating a GPG key and the knowledge behind these commands here:
-https://git-scm.com/book/en/v2/Git-Tools-Signing-Your-Work
