--- a/.gnupg/README
+++ b/.gnupg/README
@@ -4,12 +4,11 @@ A quick outline of what must be done to get everything working.
 
     keybase pgp gen --multi
 
-2) Run "gpg --list-secret-keys" and copy the serial number
+2) Run "gpg --list-signatures" and copy the serial number
    next to "sig" (it's 3B9A89CAE5009078 below):
    
     ...
-    sub   rsa4096 2019-01-31 [E] [expires: 2035-01-27]
-    sig          3B9A89CAE5009078 2019-01-31  Ahmet Alp Balkan <ahmetalpbalkan@gmail.com>
+    sig          3B9A89CAE5009078 2019-01-31  Ahmet Alp Balkan
 
 3) Configure git to automatically gpgsign commits. This consists of
    pointing git to your signing key ID, and then enabling commit
